<resources>
    <string name="app_name">Portfolio App</string>

    <string name="header_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_popular_movies">Popular Movies</string>
    <string name="button_text_super_duo">Super Duo</string>
    <string name="button_text_build_it_bigger">Build it Bigger</string>
    <string name="button_text_material_app">Make your app Material</string>
    <string name="button_text_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_text_capstone">Capstone Project</string>
    <string name="toast_message_template">The button will launch my</string>
</resources>
